--- a/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/Views/Shared/_Layout.cshtml
+++ b/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">evidence_zavad_uhrin</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Evidence Závad Místností</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,6 +25,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Rooms" asp-action="Index">Místnosti</a>
                         </li>
                     </ul>
                 </div>
