--- a/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/Views/Shared/_Layout.cshtml
+++ b/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - evidence_zavad_uhrin</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/style.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/evidence_zavad_uhrin.styles.css" asp-append-version="true" />
 </head>
