checkpoint ve skole

--- a/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/wwwroot/css/style.css
+++ b/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/wwwroot/css/style.css
@@ -139,9 +139,7 @@ body {
     background-color: #a93226;
 }
 
-/* =========================
-   AUTH (LOGIN / REGISTER)
-   ========================= */
+/* login + register */
 
 .auth-container {
     min-height: 80vh;
