skoro funkcni crud, musim si commitnout zpatky autorizaci

--- a/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/Views/Rooms/Index.cshtml
+++ b/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/Views/Rooms/Index.cshtml
@@ -20,6 +20,18 @@
                    placeholder="Zadej název nové místnosti"
                    required />
 
+            <input type="number"
+                   name="floor"
+                   class="rooms-input"
+                   placeholder="Patro"
+                   required />
+
+            <input type="text"
+                   name="roomDescription"
+                   class="rooms-input"
+                   placeholder="Popis místnosti"
+                   required />
+
             <button type="submit" class="rooms-btn rooms-btn-primary">
                 Přidat místnost
             </button>
